full version of javafx calculator with total of 5 language support